trunk/Archive2/aa/1b3aa8143aa39e/output
main.cpp:16:38: error: 'Port' is not a direct base of 'InOutPort', cannot inherit constructors
struct InOutPort : InPort, OutPort { using Port::Port; };
                                     ^           ~~~~
main.cpp:20:15: error: no matching constructor for initialization of 'InOutPort'
    InOutPort iop(m);
              ^   ~
main.cpp:16:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'Module' to 'const InOutPort' for 1st argument
struct InOutPort : InPort, OutPort { using Port::Port; };
       ^
main.cpp:16:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'Module' to 'InOutPort' for 1st argument
struct InOutPort : InPort, OutPort { using Port::Port; };
       ^
main.cpp:16:8: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
2 errors generated.
